<resources>
    <string name="app_name">Currency Converter</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>

    <string name="menu_home">Converter</string>
    <string name="menu_gallery">Calculator</string>
    <string name="menu_movie">Movie</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_map">Map</string>

    <string name="currency_ans_title">Converted Currency : </string>
    <string name="usd">usd</string>
    <string name="pound">pound</string>
    <string name="euro">euro</string>

    <string name="converter_title">Currency Converter Tool"</string>
    <string name="select_currency">Select Currency</string>

    <string name="calculator_title">Simple Calculator</string>
    <string name="answer_is">answer is:</string>

    <string name="overview">Overview</string>
    <string name="top_rated_movie">Top Rated Movie</string>
    <string name="popular_movie">Popular Movie</string>
    <string name="see_all"><![CDATA[See all >>]]></string>
    <string name="release_date">Release Date:</string>
    <string name="language">Language:</string>
    <string name="adult">18+</string>
    <string name="UA">U/A</string>

    <string name="imageurl_link">https://image.tmdb.org/t/p/w500/</string>
    <string name="apikey">b7cd3340a794e5a2f35e3abb820b497f</string>

    <string name="toast_message">some error occured</string>
    <string name="toast_filter_message">No Data Found</string>
    <string name="toast_network_error">Network Error</string>
    <string name="et_error">fill with number</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_movie">Search Movie</string>
    <string name="version_name">Version Name :</string>

    <string name="theme_normal">Normal</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_christmas">Christmas</string>
    <string name="language_english">English</string>
    <string name="language_hindi">Hindi</string>

    <string name="select_theme">Select Theme</string>
    <string name="select_language">Select Language</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="txt_all_answer">0</string>
    <string name="time_of_alarm">Time Of Alarm</string>
    <string name="description_of_alarm">Description of Alarm</string>
    <string name="save_alarm">Save Alarm</string>
    <string name="date_of_alarm">Date Of Alarm</string>
    <string name="amount_in_inr">Amount in INR</string>
    <string name="moviebanner">movie_banner</string>
    <string name="firebaseid">Firebase Id</string>

    <string name="MAPS_API_KEY">AIzaSyCgD7l72L8V7aOLRmFL61yTcOVV1LRB7t8</string>

</resources>