<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?bgColor"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/converter_title"
        android:textSize="20dp"
        android:textColor="?textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/select_currency"
        android:textColor="?textColor"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txt_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/currency_ans_title"
        android:textColor="?textColor"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <RadioButton
            android:id="@+id/rd_Usd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/usd"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:textColor="?textColor"
            />
        <RadioButton
            android:id="@+id/rd_Pound"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pound"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:textColor="?textColor"
            />
        <RadioButton
            android:id="@+id/rd_Euro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/euro"
            android:textColor="?textColor"
            android:layout_marginTop="10dp"
            android:checked="false"
             />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_amount"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="?textColor"
            android:hint="Ammount in INR" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>