<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?bgLightColor">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?bgLightColor"
        tools:context=".ui.setting.SettingFragment">


        <LinearLayout
            android:id="@+id/ll_normal_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="4"
            android:background="?bgColor"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_theme"
            tools:layout_editor_absoluteX="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?textColor"
                android:text="@string/theme_normal" />

            <ImageView
                android:id="@+id/iv_normal_theme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                app:tint="?textColor"
                android:src="@drawable/ic_baseline_done_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_dark_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="?bgColor"
            android:padding="5dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintTop_toBottomOf="@+id/ll_normal_theme"
            tools:layout_editor_absoluteX="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textColor="?textColor"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/theme_dark" />

            <ImageView
                android:id="@+id/iv_dark_theme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                app:tint="?textColor"
                android:src="@drawable/ic_baseline_done_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_christmas_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="?bgColor"
            android:orientation="horizontal"
            android:weightSum="4"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_dark_theme"
            tools:layout_editor_absoluteX="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textColor="?textColor"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/theme_christmas" />

            <ImageView
                android:id="@+id/iv_christmas_theme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                app:tint="?textColor"
                android:src="@drawable/ic_baseline_done_24" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_theme"
            android:layout_marginLeft="8dp"
            android:textSize="20sp"
            android:textColor="?textColor"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/select_language"
            android:textColor="?textColor"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_christmas_theme" />

        <TextView
            android:id="@+id/tv_title_firebase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/firebaseid"
            android:textColor="?textColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_hindi_language" />

        <LinearLayout
            android:id="@+id/ll_english_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="4"
            android:background="?bgColor"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_language"
            tools:layout_editor_absoluteX="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?textColor"
                android:text="@string/language_english" />

            <ImageView
                android:id="@+id/iv_english_language"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                app:tint="?textColor"
                android:src="@drawable/ic_baseline_done_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_hindi_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="4"
            android:background="?bgColor"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_english_language"
            tools:layout_editor_absoluteX="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?textColor"
                android:text="@string/language_hindi" />

            <ImageView
                android:id="@+id/iv_hindi_language"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                app:tint="?textColor"
                android:src="@drawable/ic_baseline_done_24" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_firebase_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="4"
            android:background="?bgColor"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_firebase"
            tools:layout_editor_absoluteX="20dp">


            <TextView
                android:id="@+id/tv_firebase_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?textColor" />

            <ImageView
                android:id="@+id/iv_firebase_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                app:tint="?textColor"
                android:src="@drawable/ic_baseline_content_copy_24" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>