<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/tv_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:fontFamily="@font/poppins_medium"
                android:text="@string/description"
                android:textColor="?metaTextColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_des_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="20dp"
                android:text="TextView"
                android:textColor="?metaTextColor"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="@+id/tv_des"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_des"
                app:layout_constraintTop_toTopOf="@+id/tv_des" />

            <TextView
                android:id="@+id/tv_date_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="TextView"
                android:textColor="?metaTextColor"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="@+id/tv_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/tv_des_info"
                app:layout_constraintTop_toTopOf="@+id/tv_date"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tv_time_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="TextView"
                android:textColor="?metaTextColor"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="@+id/tv_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/tv_des_info"
                app:layout_constraintTop_toTopOf="@+id/tv_time"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/date"
                android:textColor="?metaTextColor"
                app:layout_constraintStart_toStartOf="@+id/tv_des"
                app:layout_constraintTop_toBottomOf="@+id/tv_des" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/time"
                android:textColor="?metaTextColor"
                app:layout_constraintStart_toStartOf="@+id/tv_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_date" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>